--- a/src/style.css
+++ b/src/style.css
@@ -22,8 +22,16 @@ h1 {
     font-size: 3rem;
 }
 
+h2 {
+    font-size: 2rem;
+}
+
 h3 {
     font-size: 1.6rem;
+}
+
+h4 {
+    font-size: 1.2rem;
 }
 
 .btn {
