--- a/src/style.css
+++ b/src/style.css
@@ -15,6 +15,7 @@ body {
     background-color: #eee;
     display: flex;
     flex-direction: column;
+    width: 100%;
     height: 100vh;
 }
 
@@ -61,4 +62,9 @@ aside {
 main {
     height: 100%;
     width: 80%;
+    margin: 0 auto;
+}
+
+.remove-content {
+    display: none;
 }
