--- a/src/taskcreator.css
+++ b/src/taskcreator.css
@@ -93,3 +93,8 @@
     background-color: var(--alt);
     color: var(--plain);
 }
+
+body.darkmode #task-creation-box form .form-buttons .btn {
+    color: #eee;
+    background-color: var(--normal);
+}
