--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -102,3 +102,24 @@ input:checked + .slider:before {
 .slider.round:before {
     border-radius: 50%;
 }
+
+body.darkmode header {
+    background-color: var(--normal);
+    color: #eee;
+}
+
+body.darkmode .slider {
+    background-color: #ddd;
+}
+
+body.darkmode header .btn {
+    background-color: var(--normal);
+}
+
+body.darkmode header .btn:hover {
+    background-color: var(--light);
+}
+
+body.darkmode header .btn .btn-icon {
+    filter: invert(99%) sepia(0%) saturate(2092%) hue-rotate(177deg) brightness(116%) contrast(100%);
+}
