Add desc button functionality

--- a/src/style.css
+++ b/src/style.css
@@ -60,6 +60,21 @@ h4 {
     height: 100%;
 }
 
+#creation-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 100;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 aside {
     background-color: var(--plain);
     height: 100%;
