Fix nightmode important color

--- a/src/components/content/content.css
+++ b/src/components/content/content.css
@@ -119,3 +119,7 @@ body.darkmode #add-task-btn {
 .task-buttons .btn-important.isImportant {
     filter: invert(27%) sepia(74%) saturate(2629%) hue-rotate(2deg) brightness(102%) contrast(112%);
 }
+
+body.darkmode .task-buttons .btn-important.isImportant {
+    filter: invert(27%) sepia(74%) saturate(2629%) hue-rotate(2deg) brightness(102%) contrast(112%);
+}
